<resources>
    <string name="app_name">ASCVD_Calc1</string>
    <string name="title_home">CV Risk</string>
    <string name="title_references">References</string>
    <string name="title_about">About</string>
    <string name="title_disclaimer">Disclaimer</string>
    <string name="calculator_1">2018 Calculator</string>
    <string name="calculator_2">2013 Calculator</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_moreinfo">More Info</string>
    <string name="current_age">Patient Age (in years)</string>
    <string name="enter_age_hint">Enter patient age</string>
    <string name="biological_sex">Patient sex assigned at birth?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="race">Patient Race</string>
    <string name="white">White</string>
    <string name="black">Black</string>
    <string name="other">Other*</string>
    <string name="history_of_diabetes">Does the patient have a history of diabetes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="currently_smoke">Does the patient currently smoke?</string>
    <string name="blood_pressure_medication">Does the patient take blood pressure medication?</string>
    <string name="total_cholesterol">Total Cholesterol (mg/dL)</string>
    <string name="enter_total_cholesterol_hint">Enter patient total cholesterol</string>
    <string name="hdl_cholesterol">HDL Cholesterol (mg/dL)</string>
    <string name="enter_hdl_cholesterol_hint">Enter patient HDL cholesterol</string>
    <string name="systolic_blood_pressure">Systolic Blood Pressure (mmHg)</string>
    <string name="enter_systolic_bp_hint">Enter patient systolic blood pressure</string>
    <string name="calculate_button">CALCULATE</string>
    <string name="ascvd_risk">10-year ASCVD risk:</string>
    <string name="ascvd_risk_2013">2013 10-year ASCVD risk:</string>
    <string name="ascvd_risk_title">ASCVD Risk Calc App</string>
    <string name="title_ascvd_risk_calc">ASCVD Risk Calc</string>
    <string name="disclaimer_text">*No data was done on other races in the risk calculations reference we used so it will be calculated the same as White.</string>
    <string name="more_about_framingham_2008">"Value: educational, historical, philosophical.

The venerable Framingham heart study has followed a cohort of persons in Framingham, Massachusetts, every two years in three generational waves since the late 1940&#39;s. The longitudinal study enabled correlation of downstream health outcomes with prospective health factors, among many fascinating discoveries. The latest rendering of Framingham heart study data arrived in 2008 (see ref). Cardiac outcomes assessed are broader than the ACC&#39;s current ASCVD risk calculator. ASCVD only gives risk of &quot;hard ASCVD outcomes&quot; of fatal and non-fatal MI and fatal and non-fatal stroke. Framingham 2008 counts these same outcomes plus congestive heart failure, which is often but not always associated with the consequences of non-fatal MI. Since Framingham counts more clinical outcome entities than ASCVD, it is expected that Framingham risk should be a bit higher than ASCVD risk. Although CHF is an important outcome, it is not entirely appropriate to mix CHF cases of coronary-disease origin with those of non-coronary origin.

Critics have noted that Framingham is limited by studying but a single community, mostly from long ago, who are mostly white, and for that matter who are mostly Red Sox fans. But the biggest issue comes from the studies of the accuracy of Framingham risk predictions with modern outcomes. At all risk levels, Framingham overestimates cardiovascular event risk. It should probably not be the first or only estimation tool one uses, if one uses it at all. But it does have some value.

Educational: if you want to show yourself or your learners how big changes in cholesterol make little change in the only thing that matters, cardiac risk, Framingham is great for this purpose. Total cholesterol levels are grouped by 40-point ranges, and HDL by 5-10 point ranges. If learners or patients think that improving their cholesterol by 17 points is great, you can show them that even 40 points barely moves real risk. Why is this important?
Because it helps de-emphasize the disease-oriented obsession with cholesterol alone. When one sees that changes in cholesterol only modestly impact cardiac risk, one is more ready to appreciate that changes in any of the other risk factors have as big or bigger impact. Most of all this refocuses the learner and clinician on all elements which contribute to cardiac risk and the most patient-oriented concern of them all, actual cardiac event risk itself.

Historical: Framingham cardiovascular risk calculators started the movement looking at broader elements of cardiac risk.

Philosophical: not only did the Framingham cardiovascular risk studies and calculators broaden attention from cholesterol to all contributors to cardiovascular risk, but Framingham was at the vanguard of the movement to focus on patient outcomes over disease oriented outcomes. Before Framingham, it was perfectly fine to pat yourself on the back as a good dutiful physician if you made a patient&#39;s cholesterol numbers look prettier. Framingham spearheaded the movement of valuing patient-oriented outcomes like MI, stroke, and death over management of biomolecules. This has been a profoundly important shift in medicine."</string>
    <string name="more_about_ascvd_2013">"Value: ACC-AHA standard of care

In 2013, the American College of Cardiology and American Heart Association took two significant steps. First, they endorsed and solidified a significant part of hyperlipidemia and cardiac risk management by recommending evaluation of cardiovascular event risk and treatment of those at significant risk. Second, they introduced their own risk calculation formula, the Pooled Cohort Equations. As Framingham was based upon a single community of limited diversity and somewhat aged data, this new scheme looked at 5 more modern cohorts with broader racial composition. The outcomes are only fatal and non-fatal MI and stroke, and exclude CHF and revascularization procedures, which are reasonable editorial choices. Less reasonable is the inclusion of persons in the
&quot;modern cohorts&quot; who are on statins. In the detailed discussion (ACC-NHLBI ref), they reason that those on statins are modest in number (not quantified), and that there is probably no difference between patients with lipid numbers achieved naturally or on statin therapy. The former may be reasonable, the latter is not.

Some implementations of the ACC-AHA ASCVD risk calculator offer the user 3 racial designations: white, black, and other. ACC 2019 Risk Assessment guideline (Lloyd-Jones 2019 ref) recommended evaluating persons of nonblack minority groups (Hispanic, Asian Americans) using the white American approach. You may note that ACC ASCVD calculators give the same risk calculation whether one chooses White or Other for race. They offer discussion about differences in various racial and ethnic populations. The 2018 ACC guideline on mgmt of blood cholesterol (Grundy 2019 ref) discusses data and how a clinician has discretion to modify calculated risk based upon what is known of various groups and their risk.

Finally, two recent publications analyze the accuracy of the 2013 ASCVD PCE formula (DeFillipis ref, Yadlowsky ref). Incorporating additional multi-ethnic modern cohorts, they estimate ASCVD overestimates risk by around 20%. Yadlowsky proposes a revised pooled cohort equation, offered in this app and evaluated subsequently (Campos-Staffico ref)."</string>
    <string name="more_about_proposed_revised_pce_2018">"Value: modern multi-ethnic cohorts, may be most accurate

Initial published evaluations of the 2013 ACC-AHA pooled cohort equations ASCVD risk calculator were favorable. However, starting in 2015 studies were published looking at additional multiethnic modern cohorts and concluding that ASCVD overestimated risk by about 20%, particularly for black adults. In 2018, Yadlowsky and colleagues (see ref) altered the ASCVD approach in two substantive ways. First they dropped the oldest of the several cohorts (original Framingham with data
30-65 years old) and added two more contemporary cohorts (MESA and JHS) to the ACC&#39;s ASCVD set. Second they changed their statistical approach to try to mitigate overfitting. What they produced is superior to ACC&#39;s ASCVD. They achieved better accuracy on risk calculations, including across all race-gender pairings. And they improved the sorting of patients on either side of typical treatment thresholds. Any new scheme will move some patients from lower risk to high and higher risk to low. A mark of a good calculator scheme is that it moves far more patients from high risk to low who don&#39;t have a CV event than it moves from low risk to high who do suffer an event.
You can make a ratio of good reassignments to bad reassignments. For treatment thresholds of 5%, 7.5%, and 10%, the Yadlowsky revised PCE ratios were 23:1, 13:1, and 8:1, respectively.

Yadlowsky valided their results in two different ways: internal cross-validation and prospective hold-out validation. Their revised PCE has not yet been externally validated.

No calculator is perfect, but no calculator needs to be. It just needs to be in the right ballpark, it should sort patients well on either side of various treatment thresholds, and it should spread its accuracy well across all gender-race pairings equitably. With this tool, patients can start discussions with their doctors on when and what interventions make sense."</string>
    <string name="about_race_in_cardiovascular_risk">"What about race in cardiovascular risk assessment?

So much can, and should be said. We have been learning for several years that race considerations in medicine are complicated.

On the one hand, race is a social construct. It is a poor marker of genetic characteristics which might suggest higher or lower biological risks for most things in medicine.

On the other hand, race is highly impactful in America. If studies show higher risk of adverse cardiovascular outcomes, it must reflect the realities of socioeconomic status, access to care, monetary resources for care, biases personal and structural throughout systems, chronic stress, and more. If studies show outcomes differ, then those differences are real and matter, even if the pathways are not highly biological.

How to handle this and give each individual person before you the best care you can? You can click the race button in this and other calculators to recognize that a person before you may be subject to the same adverse forces in society which worsen outcomes. You can leave the race field at the default white setting in recognition that race is not highly biological.

You will probably notice that changing race settings do not profoundly alter who lands above and below various treatment thresholds. You are encouraged by ACC and others to modify any risk estimation by the many other things you know about the unique person in front of you, which can include race as much as anything else.

And pay attention as our understandings of race, biology, social determinants of health, and cardiovascular risk are always evolving, and hopefully improving."</string>
</resources>