<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_dialog_dialer"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_about"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/title_about" />

    <item
        android:id="@+id/navigation_disclaimer"
        android:icon="@android:drawable/ic_dialog_alert"
        android:title="@string/title_disclaimer" />

    <item
        android:id="@+id/navigation_references"
        android:icon="?attr/actionModePasteDrawable"
        android:title="@string/title_references" />
    <item
        android:id="@+id/navigation_moreinfo"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/title_moreinfo" />


</menu>